--- a/myAnalysis.ipynb
+++ b/myAnalysis.ipynb
@@ -46,7 +46,7 @@
     "train = pd.read_csv('./input/train.csv') #訓練データ\n",
     "test = pd.read_csv('./input/test.csv') #テストデータ\n",
     "train = train.drop(\"Id\", axis = 1)\n",
-    "target = train[\"SalePrice\"]\n",
+    "target = np.log1p(train[\"SalePrice\"])\n",
     "train = train.drop(\"SalePrice\", axis = 1)\n"
    ]
   },
@@ -1821,69 +1821,6 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['MSZoning',\n",
-       " 'Street',\n",
-       " 'Alley',\n",
-       " 'LotShape',\n",
-       " 'LandContour',\n",
-       " 'Utilities',\n",
-       " 'LotConfig',\n",
-       " 'LandSlope',\n",
-       " 'Neighborhood',\n",
-       " 'Condition1',\n",
-       " 'Condition2',\n",
-       " 'BldgType',\n",
-       " 'HouseStyle',\n",
-       " 'RoofStyle',\n",
-       " 'RoofMatl',\n",
-       " 'Exterior1st',\n",
-       " 'Exterior2nd',\n",
-       " 'MasVnrType',\n",
-       " 'ExterQual',\n",
-       " 'ExterCond',\n",
-       " 'Foundation',\n",
-       " 'BsmtQual',\n",
-       " 'BsmtCond',\n",
-       " 'BsmtExposure',\n",
-       " 'BsmtFinType1',\n",
-       " 'BsmtFinType2',\n",
-       " 'Heating',\n",
-       " 'HeatingQC',\n",
-       " 'CentralAir',\n",
-       " 'Electrical',\n",
-       " 'KitchenQual',\n",
-       " 'Functional',\n",
-       " 'FireplaceQu',\n",
-       " 'GarageType',\n",
-       " 'GarageFinish',\n",
-       " 'GarageQual',\n",
-       " 'GarageCond',\n",
-       " 'PavedDrive',\n",
-       " 'PoolQC',\n",
-       " 'Fence',\n",
-       " 'MiscFeature',\n",
-       " 'SaleType',\n",
-       " 'SaleCondition']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "categoricals = train.select_dtypes(exclude='number').columns.tolist()\n",
-    "categoricals"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [],
    "source": [
     "# カテゴリーのカラムを配列に\n",
@@ -1900,7 +1837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3610,18 +3547,18 @@
        "[1460 rows x 79 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_train = pd.read_csv('../input/train.csv')"
+    "train"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3643,7 +3580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3656,7 +3593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3665,7 +3602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3675,7 +3612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3693,27 +3630,23 @@
      "output_type": "stream",
      "text": [
       "Training until validation scores don't improve for 100 rounds.\n",
-      "[100]\ttraining's rmse: 41156.4\tvalid_1's rmse: 47689.6\n",
-      "[200]\ttraining's rmse: 27725.9\tvalid_1's rmse: 36693.9\n",
-      "[300]\ttraining's rmse: 22971.7\tvalid_1's rmse: 32604.1\n",
-      "[400]\ttraining's rmse: 20777\tvalid_1's rmse: 30910.6\n",
-      "[500]\ttraining's rmse: 19367\tvalid_1's rmse: 30186.5\n",
-      "[600]\ttraining's rmse: 18201.9\tvalid_1's rmse: 29702\n",
-      "[700]\ttraining's rmse: 17224.4\tvalid_1's rmse: 29400.8\n",
-      "[800]\ttraining's rmse: 16319.5\tvalid_1's rmse: 29088.7\n",
-      "[900]\ttraining's rmse: 15527.3\tvalid_1's rmse: 28864.9\n",
-      "[1000]\ttraining's rmse: 14801\tvalid_1's rmse: 28721.9\n",
-      "[1100]\ttraining's rmse: 14181.9\tvalid_1's rmse: 28640.2\n",
-      "[1200]\ttraining's rmse: 13605.8\tvalid_1's rmse: 28568.8\n",
-      "[1300]\ttraining's rmse: 13054.5\tvalid_1's rmse: 28515.2\n",
-      "[1400]\ttraining's rmse: 12537.2\tvalid_1's rmse: 28474.8\n",
-      "[1500]\ttraining's rmse: 12076.3\tvalid_1's rmse: 28444\n",
-      "[1600]\ttraining's rmse: 11613.6\tvalid_1's rmse: 28394.3\n",
-      "[1700]\ttraining's rmse: 11186.1\tvalid_1's rmse: 28354.3\n",
-      "[1800]\ttraining's rmse: 10805.8\tvalid_1's rmse: 28331.7\n",
-      "[1900]\ttraining's rmse: 10433.6\tvalid_1's rmse: 28361.9\n",
+      "[100]\ttraining's rmse: 0.217161\tvalid_1's rmse: 0.214402\n",
+      "[200]\ttraining's rmse: 0.147048\tvalid_1's rmse: 0.15899\n",
+      "[300]\ttraining's rmse: 0.119383\tvalid_1's rmse: 0.140498\n",
+      "[400]\ttraining's rmse: 0.106467\tvalid_1's rmse: 0.133065\n",
+      "[500]\ttraining's rmse: 0.0992224\tvalid_1's rmse: 0.129628\n",
+      "[600]\ttraining's rmse: 0.0942068\tvalid_1's rmse: 0.12778\n",
+      "[700]\ttraining's rmse: 0.0903083\tvalid_1's rmse: 0.126408\n",
+      "[800]\ttraining's rmse: 0.0870224\tvalid_1's rmse: 0.125668\n",
+      "[900]\ttraining's rmse: 0.0841825\tvalid_1's rmse: 0.125031\n",
+      "[1000]\ttraining's rmse: 0.0818842\tvalid_1's rmse: 0.124659\n",
+      "[1100]\ttraining's rmse: 0.0797805\tvalid_1's rmse: 0.124322\n",
+      "[1200]\ttraining's rmse: 0.0778909\tvalid_1's rmse: 0.124081\n",
+      "[1300]\ttraining's rmse: 0.0760769\tvalid_1's rmse: 0.123986\n",
+      "[1400]\ttraining's rmse: 0.0744175\tvalid_1's rmse: 0.123906\n",
+      "[1500]\ttraining's rmse: 0.0728682\tvalid_1's rmse: 0.123895\n",
       "Early stopping, best iteration is:\n",
-      "[1831]\ttraining's rmse: 10699.6\tvalid_1's rmse: 28310.7\n"
+      "[1448]\ttraining's rmse: 0.0736782\tvalid_1's rmse: 0.123863\n"
      ]
     }
    ],
@@ -3728,7 +3661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3745,7 +3678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3755,25 +3688,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "res =gbm.predict(test)\n",
-    "\n"
+    "res = gbm.predict(test)\n",
+    "for i in  range( len(test) ):\n",
+    "    res[i] = np.expm1(res[i])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
